--- a/.github/workflows/docker-build-beta.yml
+++ b/.github/workflows/docker-build-beta.yml
@@ -8,6 +8,7 @@ on:
       - 'feature-*'
       - 'dev-*'
       - 'fix/*'
+      - 'improve*'
   # Allow manual triggering with branch input
   workflow_dispatch:
     inputs:
