Add IMDSv2 support for Amazon Linux 2023 compatibility
Implements full support for Instance Metadata Service Version 2 (IMDSv2) to ensure compatibility with Amazon Linux 2023 nodes that enforce IMDSv2 by default.

Key changes:
- Configure AWS SDK environment variables to enforce IMDSv2 usage
- Add timeout and retry settings for reliable credential retrieval
- Update DPDK setup to work properly on Amazon Linux 2023
- Improve ENI pattern detection for AL2023 network interfaces
- Add comprehensive documentation on IMDSv2 support
- Add test scripts and unit tests for IMDSv2 functionality

This ensures the controller works seamlessly on both Amazon Linux 2 and Amazon Linux 2023 without requiring manual IMDS configuration changes.

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -181,6 +181,21 @@ spec:
         # This is a placeholder that should be customized
         - name: AWS_REGION
           value: "us-east-1"
+        # AWS SDK configuration for strict IMDSv2 enforcement
+        # These settings ensure IMDSv2-only operation for enhanced security
+        - name: AWS_EC2_METADATA_DISABLED
+          value: "false"
+        - name: AWS_EC2_METADATA_V1_DISABLED
+          value: "true"
+        - name: AWS_EC2_METADATA_SERVICE_ENDPOINT_MODE
+          value: "IPv4"
+        - name: AWS_EC2_METADATA_SERVICE_ENDPOINT
+          value: "http://169.254.169.254"
+        # Increased timeout and retry configuration for reliable IMDS calls
+        - name: AWS_METADATA_SERVICE_TIMEOUT
+          value: "30"
+        - name: AWS_METADATA_SERVICE_NUM_ATTEMPTS
+          value: "5"
         # Maximum number of concurrent ENI cleanup operations
         - name: MAX_CONCURRENT_ENI_CLEANUP
           value: "3"
