--- a/charts/aws-multi-eni-controller/templates/controller-deployment.yaml
+++ b/charts/aws-multi-eni-controller/templates/controller-deployment.yaml
@@ -37,6 +37,21 @@ spec:
           value: "eni-controller"
         - name: AWS_REGION
           value: "{{ .Values.awsRegion }}"
+        # AWS SDK configuration for strict IMDSv2 enforcement
+        # These settings ensure IMDSv2-only operation for enhanced security
+        - name: AWS_EC2_METADATA_DISABLED
+          value: "false"
+        - name: AWS_EC2_METADATA_V1_DISABLED
+          value: "true"
+        - name: AWS_EC2_METADATA_SERVICE_ENDPOINT_MODE
+          value: "IPv4"
+        - name: AWS_EC2_METADATA_SERVICE_ENDPOINT
+          value: "http://169.254.169.254"
+        # Increased timeout and retry configuration for reliable IMDS calls
+        - name: AWS_METADATA_SERVICE_TIMEOUT
+          value: "30"
+        - name: AWS_METADATA_SERVICE_NUM_ATTEMPTS
+          value: "5"
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
         - name: MAX_CONCURRENT_ENI_CLEANUP
