--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: ghcr.io/johnlam90/aws-multi-eni-controller
-  tag: v1.3.5
+  repository: johnlam90/aws-multi-eni-controller
+  tag: v1.3.6-imdsv2-strict
   pullPolicy: Always
 
 # Namespace to deploy the controller
@@ -36,7 +36,7 @@ eniManager:
   # Enable debug logging
   debug: true
   # Pattern to match ENI interfaces
-  eniPattern: "^(eth|ens|eni|en)[0-9]+"
+  eniPattern: "^(eth|ens|eni|en|enX)[0-9]+"
   # Interfaces to ignore
   ignoreInterfaces: "tunl0,gre0,gretap0,erspan0,ip_vti0,ip6_vti0,sit0,ip6tnl0,ip6gre0"
   # Use netlink for interface monitoring
