Add automatic IMDS hop limit configuration for containers
Implements automatic configuration of EC2 instance metadata hop limit to ensure IMDS requests work reliably from containerized environments.

- Adds environment variables to control hop limit configuration
- Implements detection of current instance ID and IMDS settings
- Updates hop limit only when needed using EC2 API
- Documents required IAM permissions and common troubleshooting steps
- Updates README and documentation with enhanced IMDSv2 support details

This improves reliability in Kubernetes environments where the default hop limit of 1 can cause credential retrieval failures.

--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -216,6 +216,11 @@ spec:
           value: "30"
         - name: AWS_METADATA_SERVICE_NUM_ATTEMPTS
           value: "5"
+        # IMDS hop limit auto-configuration
+        - name: IMDS_AUTO_CONFIGURE_HOP_LIMIT
+          value: "{{ .Values.imds.autoConfigureHopLimit }}"
+        - name: IMDS_HOP_LIMIT
+          value: "{{ .Values.imds.hopLimit }}"
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
         - name: DEFAULT_MTU
