--- a/charts/aws-multi-eni-controller/templates/controller-deployment.yaml
+++ b/charts/aws-multi-eni-controller/templates/controller-deployment.yaml
@@ -52,6 +52,16 @@ spec:
           value: "30"
         - name: AWS_METADATA_SERVICE_NUM_ATTEMPTS
           value: "5"
+        # IMDS hop limit auto-configuration
+        - name: IMDS_AUTO_CONFIGURE_HOP_LIMIT
+          value: "{{ .Values.imds.autoConfigureHopLimit }}"
+        - name: IMDS_HOP_LIMIT
+          value: "{{ .Values.imds.hopLimit }}"
+        # Node name for Kubernetes context
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
         - name: MAX_CONCURRENT_ENI_CLEANUP
