--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -196,6 +196,11 @@ spec:
           value: "30"
         - name: AWS_METADATA_SERVICE_NUM_ATTEMPTS
           value: "5"
+        # IMDS hop limit auto-configuration
+        - name: IMDS_AUTO_CONFIGURE_HOP_LIMIT
+          value: "true"
+        - name: IMDS_HOP_LIMIT
+          value: "2"
         # Maximum number of concurrent ENI cleanup operations
         - name: MAX_CONCURRENT_ENI_CLEANUP
           value: "3"
