Add cloud-native authentication for IMDSv2 node recovery
Implement multi-strategy IMDS configuration to solve the chicken-and-egg problem
with IMDSv2 access on new instances. This enables automatic node replacement
recovery without manual intervention.

Key improvements:
- Add IRSA (IAM Roles for Service Accounts) support for cloud-native auth
- Implement private IP-based instance ID discovery for new nodes
- Add VPC-wide IMDS configuration as fallback strategy
- Create background IMDS configuration retry mechanism
- Add comprehensive documentation for IRSA setup

Bump version to v1.3.6 to reflect these improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ recommended-sample-improvements.yaml
 sriov-device-plugin-hostpath.yaml
 charts/aws-multi-eni-controller/values.yaml
 aws-multi-eni-controller
+trust-policy.json
