--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -221,6 +221,9 @@ spec:
           value: "{{ .Values.imds.autoConfigureHopLimit }}"
         - name: IMDS_HOP_LIMIT
           value: "{{ .Values.imds.hopLimit }}"
+        # Enable aggressive IMDS configuration for node replacement scenarios
+        - name: IMDS_AGGRESSIVE_CONFIGURATION
+          value: "{{ .Values.imds.aggressiveConfiguration }}"
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
         - name: DEFAULT_MTU
