Add retry logic for NodeENI resource updates
Implements robust retry mechanisms for handling resource version conflicts
when updating NodeENI resources and their status. This helps prevent
reconciliation failures in concurrent update scenarios.

Key improvements:
- Adds exponential backoff retry logic for NodeENI updates and status updates
- Preserves intended changes during retry attempts
- Updates all NodeENI modification points to use retry-capable methods
- Adds comprehensive unit tests to verify retry behavior

Also updates container image repository to use ghcr.io and updates tag to beta-332d180.

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: v1.3.6-cloud-native-auth-v2
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: beta-332d180
   pullPolicy: Always
 
 # Namespace to deploy the controller
