Update controller image to use GitHub Container Registry
Changes the image repository from Docker Hub to GitHub Container Registry (ghcr.io)
and updates the tag from v1.3.6-comprehensive-tests to beta-a86ce7b.

This switch to GitHub Container Registry provides better integration with
GitHub workflows and actions, while the new tag reflects the current
development branch.

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: v1.3.6-comprehensive-tests
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: beta-a86ce7b
   pullPolicy: Always
 
 # Namespace to deploy the controller
