Improve ENI cleanup coordination and interface detection
Implements a more granular locking strategy for ENI cleanup operations:

- Adds node-level coordination for DPDK/SR-IOV ENIs while using granular locking for standard ENIs
- Enhances interface detection with better logging and retry mechanisms
- Improves wait logic for expected interfaces to appear based on NodeENI attachments
- Updates image references to use the fixed AL2023 DPDK setup version
- Adds more detailed logging for troubleshooting coordination issues

These changes help prevent race conditions during cleanup operations while allowing higher parallelism for standard ENI operations.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ recommended-sample-improvements.yaml
 # Test artifacts that shouldn't be committed
 sriov-device-plugin-hostpath.yaml
 
+charts/aws-multi-eni-controller/values.yaml.backup
+deploy/deployment.yaml.backup
+deploy/eni-manager-daemonset.yaml.backup
