--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -173,7 +173,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:v1.3.6-cloud-native-auth
+        image: johnlam90/aws-multi-eni-controller:fix-al2023-dpdk-setup-7101ae5
         env:
         - name: COMPONENT
           value: "eni-controller"
