Prepare v1.3.8 release: Update to GitHub Container Registry and synchronize configurations
- Update all image references from Docker Hub to GitHub Container Registry (ghcr.io)
- Synchronize YAML manifests with Helm chart configurations
- Bump version to v1.3.8 in Chart.yaml and all image tags
- Add missing NODE_NAME environment variable to deployment.yaml
- Update resource limits to match Helm chart values (500m CPU, 512Mi memory)
- Add LOG_LEVEL environment variable to eni-manager-daemonset.yaml
- Fix golint issue in pkg/eni-manager/network/manager.go (remove unnecessary else block)
- Ensure MAX_CONCURRENT_RECONCILES is set to 5 consistently across all manifests
- All Go code quality checks passing (go vet, golint, gocyclo, ineffassign, misspell)
- All tests passing successfully

--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: fix-cleanup-case-01-2261c5e
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: v1.3.8
   pullPolicy: Always
 
 # Namespace to deploy the controller
