--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -173,7 +173,7 @@ spec:
       #   - "kubernetes"
       containers:
       - name: manager
-        image: johnlam90/aws-multi-eni-controller:fix-cleanup-case-01-2261c5e
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.8
         env:
         - name: COMPONENT
           value: "eni-controller"
@@ -209,7 +209,12 @@ spec:
           value: "3"
         # Maximum number of concurrent reconciles
         - name: MAX_CONCURRENT_RECONCILES
-          value: "1"
+          value: "5"
+        # Node name for Kubernetes context
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         # Let Kubernetes handle service discovery automatically
         # - name: KUBERNETES_SERVICE_HOST
         #   value: "172.20.0.1"
@@ -220,8 +225,8 @@ spec:
         - --enable-leader-election
         resources:
           limits:
-            cpu: 100m
-            memory: 128Mi
+            cpu: 500m
+            memory: 512Mi
           requests:
             cpu: 100m
             memory: 128Mi
