--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         ng: multi-eni
       initContainers:
       - name: dpdk-setup
-        image: johnlam90/aws-multi-eni-controller:fix-cleanup-case-01-2261c5e
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.8
         command: ["/bin/sh", "-c"]
         args:
         - |
@@ -180,7 +180,7 @@ spec:
           readOnly: true
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:fix-cleanup-case-01-2261c5e
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:v1.3.8
         env:
         - name: COMPONENT
           value: "eni-manager"
@@ -215,6 +215,8 @@ spec:
         # Enable aggressive IMDS configuration for node replacement scenarios
         - name: IMDS_AGGRESSIVE_CONFIGURATION
           value: "true"
+        - name: LOG_LEVEL
+          value: "info"
         # DPDK Configuration
         - name: ENABLE_DPDK
           value: "true"  # Enable DPDK device binding
