--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.3.7"
-appVersion: "v1.3.6-comprehensive-tests"
+version: "1.3.8"
+appVersion: "v1.3.8"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
